PIP-204 - Upgrade to Spring Boot 2.7.0